--- a/index.html
+++ b/index.html
@@ -8,29 +8,174 @@
   
   <title>Frontend Mentor | Product preview card component</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    :root{
+      --mobile: 375px;
+      --desktop: 1440px;
+
+      --primary-dark-cyan: hsl(158, 36%, 37%);
+      --primary-cream: hsl(30, 38%, 92%);
+
+      --neutral-very-dark-blue:hsl(212, 21%, 14%);
+      --neutral-dark-grayish-blue: hsl(228, 12%, 48%);
+
+    }
+
+    p{
+      font-size: 14px;
+      color: var(--neutral-dark-grayish-blue);
+    }
+
+    .font-faunces{
+      font-family: "Fraunces", serif;
+      font-weight: 700;
+    }
+
+    body{
+      font-family: "Montserrat", sans-serif;
+      background-color: var(--primary-cream);
+      padding: 0  1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .card{
+      display: flex;
+      position: relative;
+      flex-direction: column;
+      border-radius: 10px;
+      overflow: hidden;
+      background-color: white;
+      max-width: 90vw;
+    }
+
+    .card-image{
+      width: 100%;
+      height: 30vh;
+      background-image: url('./images/image-product-mobile.jpg');
+      background-position: center;
+      background-size: cover;
+    }
+    .card-content__wrapper{
+      padding: 1.5rem 1.25rem;
+    }
+    .card-content__caption{
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      margin: 0;
+      font-size: .65rem;
+    }
+    .card-content__title{
+      margin: 10px 0 15px;
+      color: var(--neutral-very-dark-blue);
+    }
+    .card-content__description{
+      line-height: 1.3rem;
+    }
+    .card-content__price{
+      display: flex;
+      /* justify-content: center; */
+      align-items: center;
+      gap: 1rem;
+    }
+    .card-content__price__discount{
+      font-size: 1.75rem;
+      color: var(--primary-dark-cyan);
+      margin: .75rem 0 1rem;
+    }
+
+    .card-content__price__regular{
+      text-decoration: line-through;
+    }
+
+
+    .card-content__button{
+      appearance: unset;
+      background-color: var(--primary-dark-cyan);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: .75rem;
+      width: 100%;
+      text-align: center;
+      padding: .756rem 0;
+      border-radius: 10px;
+      font-size: 14px;
+    }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
+    @media only screen and (min-width: 376px) {
+
+      .card{
+        flex-direction: row;
+        max-width: 45vw;
+      }
+
+      .card-image{
+        background-image: url('./images/image-product-desktop.jpg');
+        background-position: center;
+        background-size: cover;
+        height: 100%;
+      }
+      
+      .card > div{
+        flex: 0 0 50%;
+      }
+
+      .card-content__wrapper{
+        padding: 1.7rem 1.5rem;
+      }
+      .card-content__title{
+        font-size: 2.2rem;
+      }
+      .card-content__price__discount{
+        font-size: 1.89rem;
+        /* color: var(--primary-dark-cyan); */
+        /* margin: .75rem 0 1rem; */
+      }
+
+    }
+
   </style>
 </head>
 <body>
-
-  Perfume
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
+  <div class="card">
+    <div class="card-image"></div>
+    <section class="card-content__wrapper">
+      <p class="card-content__caption">Perfume</p>
+      <h1 class="font-faunces card-content__title">Gabrielle Essence Eau De Parfum</h1>
+      <p class="card-content__description">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.
+      </p>
+      <div class="card-content__price">
+        <p class="font-faunces card-content__price__discount">$149.99</p>
+        <p class="card-content__price__regular">$169.99</p>
+      </div>
+      <a class="card-content__button">
+        <i>
+          <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
+        </i>
+        <span>
+          Add to cart
+        </span>
+      </a>
+    </section>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.github.com/mbank14" target="_blank">mashofa</a>.
   </div>
 </body>
 </html>
