--- a/responsive-four-card/index.html
+++ b/responsive-four-card/index.html
@@ -10,35 +10,76 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+
+
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <div>
+    <div class="main">
+      <section class="">
+        <h1 class="card-title">Reliable, efficient delivery</h1>
+        <h2 class="card-description">Powered by Technology</h2>
+        <p>
+          Our Artificial Intelligence powered tools use millions of project data points 
+          to ensure that your project is successful
+        </p>
+      </section>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+      <div class="features">
+        <div class="card">
+          <section>
+            <h2 class="card-title">Supervisor</h2>
+            <p class="card-description">
+              Monitors activity to identify project roadblocks
+            </p>
+            <figure>
+              <img src="./images/icon-supervisor.svg" alt="">
+            </figure>
+          </section>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+          <section>
+            <h2 class="card-title">Team Builder</h2>
+            <p class="card-description">
+              Scans our talent network to create the optimal team for your project
+            </p>
+            <figure>
+              <img src="./images/icon-team-builder.svg" alt="">
+            </figure>
+          </section>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+          <section>
+            <h2 class="card-title">Karma</h2>
+            <p class="card-description">
+              Regularly evaluates our talent to ensure quality
+            </p>
+            <figure>
+              <img src="./images/icon-karma.svg" alt="">
+            </figure>
+          </section>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+          <section>
+            <h2 class="card-title">Calculator</h2>
+            <p class="card-description">
+              Uses data from past projects to provide better delivery estimates
+            </p>
+            <figure>
+              <img src="./images/icon-calculator.svg" alt="">
+            </figure>
+          </section>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+        </div>
 
-  
+      </div>
+    </div>
+  </div>
+
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.github.com/mbank14" target="_blank">mashofa</a>.
     </p>
   </footer>
 </body>
