--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <h1>List Collection Frontend Mentor</h1>
         <div>
             <a href="./FM/index.html">Preview Card</a>
+            <a href="./responsive-four-card/index.html">Four Card Feature Section</a>
+
         </div>
     </section>
     <footer>
