--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <section class="list-content">
         <h1>List Collection Frontend Mentor</h1>
-        <div>
+        <div style="display: flex; flex-direction: column;">
             <a href="./FM/index.html">Preview Card</a>
             <a href="./responsive-four-card/index.html">Four Card Feature Section</a>
 
