--- a/responsive-four-card/index.html
+++ b/responsive-four-card/index.html
@@ -11,6 +11,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
 
+    .card{}
 
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
