--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <div style="display: flex; flex-direction: column;">
                 <a href="./FM/index.html">Preview Card</a>
                 <a href="./responsive-four-card/index.html">Four Card Feature Section</a>
+                <a href="./grid/index.html">Testimonial Grid</a>
             </div>
         </section>
     </main>
