--- a/social-link/index.html
+++ b/social-link/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,20 +16,46 @@
   </style>
 </head>
 <body>
+  <main class="main-card">
+    <div>
+      <img src="./assets/images/avatar-jessica.jpeg" />
+      <h1>
+        Jessica Randall
+      </h1>
+      <p class="asal">
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+        London, United Kingdom
+      </p>
+      <p>
+        "Front-end developer and avid reader."
+      </p>
+    </div>
+    <nav>
+      <a href="#">
+        GitHub
+      </a>
+      <a href="#">
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+        Frontend Mentor
+      </a>
+      <a href="#">
+
+        LinkedIn
+      </a>
+      <a href="#">
+
+        Twitter
+      </a>
+      <a href="#">
+
+        Instagram
+      </a>
+    </nav>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="http://www.github.com/mbank14" target="_blank">mashofa</a>.
+  </footer>
 </body>
 </html>
