gabut cannot sleep pucek

--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -10,28 +10,186 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+    :root{
+      --pale-blue: hsl(225, 100%, 94%);
+      --bright-blue: hsl(245, 75%, 52%);
+
+      --very-pale-blue: hsl(225, 100%, 98%);
+--desaturated-blue: hsl(224, 23%, 55%);
+--dark-blue: hsl(223, 47%, 23%);
+    }
+    *{
+      margin: 0;
+    }
+
+
+    html{
+      font-size: 16px;
+      font-family: 'Red Hat Display', serif;
+    }
+
+    main{
+      padding: 2rem;
+      background-color: var(--pale-blue);
+      min-height: 80vh;
+    }
+
+    .card{
+      overflow: hidden;
+      position: relative;
+      border-radius: 15px;
+      z-index: 4;
+      background-color: #fff;
+    }
+
+    .card-hero__image{
+      width: 100%;
+    }
+
+    .card-content{
+      padding: 1.5rem;
+    }
+    .card-content__title{
+      font-size: 1.4rem;
+      text-align: center;
+      color: var(--dark-blue);
+      margin-bottom: 1rem;
+    }
+    .card-content__description{
+      text-align: center;
+      color: var(--desaturated-blue);
+      font-size: 14px;
+      margin-bottom: 2rem;
+    }
+
+    .card-content__info{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 1rem;
+      padding: 1rem;
+      background-color: var(--very-pale-blue);
+      border-radius: 10px;
+      margin-bottom: 1rem;
+    }
+    .card-content__info > a{
+      font-size: 13px;
+      font-weight: 600;
+    }
+    .card-content__info__plan{
+      flex: 1 0 ;
+    }
+    .card-content__info__plan > p:nth-child(1){
+      font-weight: 800;
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+    .card-content__info__plan > p:nth-child(2),
+    .card-content__info__plan > a{
+      font-size: 13px;
+    }
+
+    .btn-payment:hover{
+      background-color: skyblue;
+    }
+    .btn-payment{
+      width: 100%;
+      background-color: var(--bright-blue);
+      color: white;
+      font-weight: 600;
+      border: 0;
+      padding: 1rem 0;
+      border-radius: 10px;
+      box-shadow: 0 10px 10px 0 rgba(162, 162, 255, 0.407);
+      margin-bottom: 1.5rem;
+      cursor: pointer;
+    }
+    .cancel{
+      width: 100%;
+      text-align: center;
+      display: inline-block;
+      margin-bottom: 1rem;
+      text-decoration: none;
+      color: var(--desaturated-blue);
+      font-weight: 600;
+    }
+    .bg > img:nth-child(1){
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+    .bg > img:nth-child(2){
+      display: none;
+    }
+
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
+    @media screen and (min-width: 376px){
+      main{
+        display: flex;
+        justify-content: center;
+      }
+      .card{
+        max-width: 350px;
+      }
+
+      .bg > img:nth-child(2){
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+    .bg > img:nth-child(1){
+      display: none;
+    }
+
+    }
   </style>
 </head>
 <body>
+  <main>
+    <div class="bg">
+      <img src="./images/pattern-background-mobile.svg" alt="">
+      <img src="./images/pattern-background-desktop.svg" alt="">
+    </div>
+    <div class="card">
+      <img class="card-hero__image" src="./images/illustration-hero.svg" />
+      <div class="card-content">
+        <h1 class="card-content__title"> Order Summary</h1>
+        <p class="card-content__description">
+          You can now listen to millions of songs, audiobooks, and podcasts on any 
+          device anywhere you like!
+        </p>
 
-  Order Summary
+        <div class="card-content__info">
+          
+            <img src="./images/icon-music.svg" alt="">
+          
+          <div class="card-content__info__plan">
+            <p>
+              Annual Plan
+            </p>
+            <p>
+              $59.99/year
+            </p>
+          </div>
+          <a href="#">Change</a>
+        </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
+        <button class="btn-payment">  Proceed to Payment</button>
+        <a class="cancel" href="#">Cancel Order</a>
+      </div>
+    </div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://www.github.com/mbank14">mashofa</a>.
+  </footer>
 </body>
 </html>
