--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <a href="./FM/index.html">Preview Card</a>
                 <a href="./responsive-four-card/index.html">Four Card Feature Section</a>
                 <a href="./grid/index.html">Testimonial Grid</a>
+                <a href="./interactive-rating/">Interactive rating component</a>
             </div>
         </section>
     </main>
