--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>FM Collections</title>
 </head>
 <style>
+    html{
+        font-family: sans-serif;
+    }
     body{
         margin: 0;
     }
@@ -31,13 +34,18 @@
     }
 
     .list-content{
-        display: flex;
-        align-items: center;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         width: 100%;
         height: 100vh;
         /* text-align: center; */
     }
+    .list-content .clg-list{
+        display: flex;
+        flex-direction: row;
+        gap: .56rem;
+    }
+
 </style>
 <body>
     <main class="main-wrapper">
@@ -49,12 +57,17 @@
             </article>
         </section>
         <section class="list-content right-side">
-            <h1>List Collection Frontend Mentor</h1>
-            <div style="display: flex; flex-direction: column;">
-                <a href="./FM/index.html">Preview Card</a>
-                <a href="./responsive-four-card/index.html">Four Card Feature Section</a>
-                <a href="./grid/index.html">Testimonial Grid</a>
-                <a href="./interactive-rating/">Interactive rating component</a>
+            <div>
+                <h2>List Collection Frontend Mentor</h2>
+                <div class="clg-list" style="display: flex; flex-direction: column;">
+                    <a href="./FM/index.html">Preview Card</a>
+                    <a href="./responsive-four-card/index.html">Four Card Feature Section</a>
+                    <a href="./grid/index.html">Testimonial Grid</a>
+                    <a href="./interactive-rating/">Interactive rating component</a>
+                </div>
+            </div>
+            <div>
+                <h2>Using Nextjs</h2>
             </div>
         </section>
     </main>
