--- a/landing-sunny/index.html
+++ b/landing-sunny/index.html
@@ -16,12 +16,48 @@
   </style>
 </head>
 <body>
-  About
-  Services
-  Projects
-  Contact
+  <header class="navigation-wrapper">
+    <nav class="nav container">
+      <div class="nav-logo">
+        <img src="./images/logo.svg" alt="Logo website">
+      </div>
+      <div class="nav-desktop d-none">menu</div>
+      <div class="nav-mobile"> 
+        <div id="menuBurger" class="nav-mobile__burger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <ul class="nav-mobile__menu d-none">
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Projcets</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-  We are creatives
+  <main>
+    <section id="hero" class="hero">
+      <div>
+        <h1>We are </br>creatives</h1>
+        <img src="./images/icon-arrow-down.svg" alt="icon arrow down">
+      </div>
+      <img src="./images/mobile/image-header.jpg" alt="">
+    </section>  
+  </main>
+
+
+  
 
   Transform your brand
 
