progress image text

--- a/landing-sunny/index.html
+++ b/landing-sunny/index.html
@@ -54,15 +54,23 @@
       </div>
       <img src="./images/mobile/image-header.jpg" alt="">
     </section>  
+
+    <section class="text-image">
+      <div>
+        <h2 class="font-title">
+          Transform your brand
+        </h2>
+        <p>
+          We are a full-service creative agency specializing in helping brands grow fast. 
+          Engage your clients through compelling visuals that do most of the marketing for you.        
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div></div>
+    </section>
   </main>
+ 
 
-
-  
-
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
 
   Learn more
 
