--- a/landing-sunny/index.html
+++ b/landing-sunny/index.html
@@ -56,7 +56,7 @@
     </section>  
 
     <section class="text-image">
-      <div>
+      <div class="text-image__text container">
         <h2 class="font-title">
           Transform your brand
         </h2>
@@ -64,33 +64,88 @@
           We are a full-service creative agency specializing in helping brands grow fast. 
           Engage your clients through compelling visuals that do most of the marketing for you.        
         </p>
-        <a href="#">Learn more</a>
+        <div>
+
+          <a href="#" class="underline-yellow">Learn more</a>
+        </div>
       </div>
-      <div></div>
+      <div class="text-image__image">
+        <img src="./images/mobile/image-transform.jpg" alt="">
+      </div>
     </section>
+    <section class="text-image">
+      <div class="text-image__text container">
+        <h2 class="font-title">
+          Stand out to the right audience
+        </h2>
+        <p>
+          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.   
+        </p>
+        <div>
+
+          <a href="#" class="underline-red">Learn more</a>
+        </div>
+      </div>
+      <div class="text-image__image">
+        <img src="./images/mobile/image-stand-out.jpg" alt="">
+      </div>
+    </section>
+
+
+    <section class="image-absolute-text">
+      <div>
+        <div class="image-absolute-text__wrapper">
+          <img src="./images/mobile/image-graphic-design.jpg" />
+          <div class="absolute-text cyan">
+            <h2 class="font-title">
+              Graphic design
+            </h2>
+            <p>
+              Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+            </p>
+          </div>
+        </div>
+      </div>
+      
+      <div>
+        <div class="image-absolute-text__wrapper">
+          <img src="./images/mobile/image-photography.jpg" />
+          <div class="absolute-text blue">
+            <h2 class="font-title">
+              Photography
+            </h2>
+            <p>
+              Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+            </p>
+          </div>
+        </div>
+      </div>
+      
+    </section>
+
+    <section id="client-testimonial">
+      <div class="client-testimonial">
+        <h2>CLIENT TESTIMONIAL</h2>
+
+        <div class="testimonial-card">
+          <img src="./images/image-emily.jpg" alt="image Emily" />
+          <p>
+            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+          </p>
+          <div>
+            <p class="font-title">Emily R.</p>
+            <p>Marketing Director</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
   </main>
+
+
  
 
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
 
   Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
   Thomas S.
