--- a/landing-sunny/index.html
+++ b/landing-sunny/index.html
@@ -124,42 +124,100 @@
     </section>
 
     <section id="client-testimonial">
-      <div class="client-testimonial">
-        <h2>CLIENT TESTIMONIAL</h2>
+      <div class="client-testimonial container">
+        <h4 class="font-title">CLIENT TESTIMONIAL</h4>
 
-        <div class="testimonial-card">
-          <img src="./images/image-emily.jpg" alt="image Emily" />
-          <p>
-            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-          </p>
-          <div>
-            <p class="font-title">Emily R.</p>
-            <p>Marketing Director</p>
+        <div class="list-testimonial">
+
+          <div class="testimonial-card">
+            <img src="./images/image-emily.jpg" alt="image Emily" />
+            <p>
+              We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+            </p>
+            <div class="testimonial-card__name">
+              <p class="font-title">Emily R.</p>
+              <p class="testimonial-card__name__title-job">Marketing Director</p>
+            </div>
           </div>
+
+          <div class="testimonial-card">
+            <img src="./images/image-thomas.jpg" alt="image Emily" />
+            <p>
+              Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <div class="testimonial-card__name">
+              <p class="font-title">  Thomas S.</p>
+              <p class="testimonial-card__name__title-job">  Chief Operating Officer</p>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="./images/image-jennie.jpg" alt="image Emily" />
+            <p>
+              Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+            </p>
+            <div class="testimonial-card__name">
+              <p class="font-title">  Jennie F.</p>
+              <p class="testimonial-card__name__title-job">  Business Owner</p>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
 
+    <section id="gallery"> 
+      <img src="./images/mobile/image-gallery-cone.jpg" alt="gallery image photo">
+      <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="gallery image photo">
+      <img src="./images/mobile/image-gallery-orange.jpg" alt="gallery image photo">
+      <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="gallery image photo">
+    </section>
 
   </main>
-
-
- 
-
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
+  <footer>
+    <div>
+      <img src="./images/logo.svg" alt="">
+    </div>
+    <div>
+      <ul>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Services</a>
+        </li>
+        <li>
+          <a href="#">Projcets</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./images/icon-facebook.svg" alt="" srcset="">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./images/icon-instagram.svg" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./images/icon-pinterest.svg" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./images/icon-twitter.svg" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
