--- a/landing-sunny/index.html
+++ b/landing-sunny/index.html
@@ -21,14 +21,8 @@
       <div class="nav-logo">
         <img src="./images/logo.svg" alt="Logo website">
       </div>
-      <div class="nav-desktop d-none">menu</div>
-      <div class="nav-mobile"> 
-        <div id="menuBurger" class="nav-mobile__burger">
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-        <ul class="nav-mobile__menu d-none">
+      <div class="nav-desktop ">
+        <ul id="menuDesktop" class="nav-desktop__menu">
           <li>
             <a href="#">About</a>
           </li>
@@ -39,7 +33,28 @@
             <a href="#">Projcets</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a class="contact-desktop font-title" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-mobile"> 
+        <div id="menuBurger" class="nav-mobile__burger">
+          <div class="burgerline"></div>
+          <div class="burgerline"></div>
+          <div class="burgerline"></div>
+        </div>
+        <ul id="listMenu" class="nav-mobile__menu">
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Projcets</a>
+          </li>
+          <li>
+            <a class="contact-mobile font-title" href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -52,7 +67,8 @@
         <h1>We are </br>creatives</h1>
         <img src="./images/icon-arrow-down.svg" alt="icon arrow down">
       </div>
-      <img src="./images/mobile/image-header.jpg" alt="">
+      <img class="hero-img__mb" src="./images/mobile/image-header.jpg" alt="image header">
+      <img class="hero-img__desktop" src="./images/desktop/image-header.jpg" alt="image header">
     </section>  
 
     <section class="text-image">
@@ -69,10 +85,12 @@
           <a href="#" class="underline-yellow">Learn more</a>
         </div>
       </div>
-      <div class="text-image__image">
-        <img src="./images/mobile/image-transform.jpg" alt="">
+      <div class="text-image__image image-right">
+        <img class="hero-img__mb" src="./images/mobile/image-transform.jpg" alt="">
+        <img class="hero-img__desktop" src="./images/desktop/image-transform.jpg" alt="">
       </div>
     </section>
+
     <section class="text-image">
       <div class="text-image__text container">
         <h2 class="font-title">
@@ -87,7 +105,8 @@
         </div>
       </div>
       <div class="text-image__image">
-        <img src="./images/mobile/image-stand-out.jpg" alt="">
+        <img class="hero-img__mb" src="./images/mobile/image-stand-out.jpg" alt="">
+        <img class="hero-img__desktop" src="./images/desktop/image-stand-out.jpg" alt="">
       </div>
     </section>
 
@@ -95,7 +114,8 @@
     <section class="image-absolute-text">
       <div>
         <div class="image-absolute-text__wrapper">
-          <img src="./images/mobile/image-graphic-design.jpg" />
+          <img class="hero-img__mb" src="./images/mobile/image-graphic-design.jpg" />
+          <img class="hero-img__desktop" src="./images/desktop/image-graphic-design.jpg" />
           <div class="absolute-text cyan">
             <h2 class="font-title">
               Graphic design
@@ -109,7 +129,8 @@
       
       <div>
         <div class="image-absolute-text__wrapper">
-          <img src="./images/mobile/image-photography.jpg" />
+          <img class="hero-img__mb" src="./images/mobile/image-photography.jpg" />
+          <img class="hero-img__desktop" src="./images/desktop/image-photography.jpg" />
           <div class="absolute-text blue">
             <h2 class="font-title">
               Photography
@@ -177,7 +198,7 @@
     <div>
       <img src="./images/logo.svg" alt="">
     </div>
-    <div>
+    <div class="footer-nav">
       <ul>
         <li>
           <a href="#">About</a>
@@ -193,7 +214,7 @@
         </li>
       </ul>
     </div>
-    <div>
+    <div class="footer-icon">
       <ul>
         <li>
           <a href="#">
@@ -222,5 +243,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="main.js">
+  </script>
 </body>
 </html>
