--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <a href="./responsive-four-card/index.html">Four Card Feature Section</a>
                     <a href="./grid/index.html">Testimonial Grid</a>
                     <a href="./interactive-rating/">Interactive rating component</a>
+                    <a href="./landing-sunny/">Landing page agency sunny</a>
                 </div>
             </div>
             <div>
