--- a/article-preview-component/index.html
+++ b/article-preview-component/index.html
@@ -15,16 +15,59 @@
   </style>
 </head>
 <body>
+  <main>
+    <section class="card">
+      <div class="card-image">
+        <img src="./images/drawers.jpg" alt="image drawer">
+      </div>
+      <div class="card-text">
+        <h2>
+          Shift the overall look and feel by adding these wonderful 
+          touches to furniture in your home
+        </h2>
+        <p>
+          Ever been in a room and felt like something was missing? Perhaps 
+          it felt slightly bare and uninviting. I’ve got some simple tips 
+          to help you make any room feel complete.        
+        </p>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
+        <div class="card-text__profile-share">
+          <div class="profile-share__picture">
+            <img src="./images/avatar-michelle.jpg" alt="profile Michelle"/>
+          </div>
+          <div class="profile">
+            <p class="profile-share__name"> Michelle Appleton</p>
+            <p class="profile-share__date"> 28 Jun 2020</p>
+          </div>
 
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
+          <div class="icons">
+            <div class="share-list">
 
-  Michelle Appleton
-  28 Jun 2020
+              <div>
+                <p>SHARE</p>
+                <div>
+                  <img src="./images/icon-facebook.svg" alt="icon facebook">
+                  <img src="./images/icon-pinterest.svg" alt="icon pinterest">
+                  <img src="./images/icon-twitter.svg" alt="icon x">
+                </div>
+              </div>
+            </div>
+            
+            <div id="iconShare">
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+ 
+
+
+
+ 
 
   Share
   
